objects/Booking__c.object
<CustomObject>
    <description>To track customer bookings coming from Datamart</description>
    <fields>
        <fullName>Booked_By__c</fullName>
        <label>Booked By</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Bookings</relationshipLabel>
        <relationshipName>Bookings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Booking_Date__c</fullName>
        <label>Booking Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Booking_Id__c</fullName>
        <externalId>true</externalId>
        <label>Booking Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_Status__c</fullName>
        <label>Booking Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Active and Updated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Count_No_of_Journey_Details__c</fullName>
        <label>Count No. of Journey Details</label>
        <summaryForeignKey>Journey_Detail__c.Booking__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Currency_Code__c</fullName>
        <label>Currency Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_First_Name__c</fullName>
        <label>Customer First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Last_Name__c</fullName>
        <label>Customer Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Phone_Number__c</fullName>
        <label>Customer Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Last_Journey_Date__c</fullName>
        <label>Last Journey Date</label>
        <summarizedField>Journey_Detail__c.Arrival_Time__c</summarizedField>
        <summaryForeignKey>Journey_Detail__c.Booking__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Organization_Code__c</fullName>
        <label>Organization Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Cases_Associated__c</fullName>
        <label>Total Cases Associated</label>
        <summarizedField>Journey_Detail__c.Total_number_of_cases__c</summarizedField>
        <summaryFilterItems>
            <field>Journey_Detail__c.Total_number_of_cases__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>Journey_Detail__c.Booking__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Booking</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Booking_Date__c</columns>
        <columns>Booked_By__c</columns>
        <columns>Booking_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>PNR No.</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bookings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>